--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^1.4.1"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "http-mitm-proxy": "^0.5.1",
     "yaxy": "^0.2.0"
   }
