--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-mitm-proxy": "^0.5.1",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
+    "sweetalert": "^1.1.3",
     "yaxy": "^0.2.0"
   }
 }
